[gd_scene load_steps=7 format=3 uid="uid://qpwnrp6mvont"]

[ext_resource type="Script" uid="uid://b16uxesxhm868" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bapp2hd88h2ob" path="res://knob.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://dydvs842s5wda" path="res://record.gd" id="2_h2yge"]

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_ig7tw"]
polyphony = 128

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_ig7tw"]
mix_rate = 11025.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.201527, 0.201527, 0.201526, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="main" type="Node" node_paths=PackedStringArray("record", "release_knob", "down", "current", "up", "piano_black", "piano_white", "note_label", "polyphonic_player", "audio_player")]
script = ExtResource("1_ig7tw")
record = NodePath("Control/VBoxContainer/MarginContainer/VBoxContainer/record/record")
release_knob = NodePath("Control/release_knob")
down = NodePath("Control/VBoxContainer/MarginContainer/VBoxContainer/quick/down")
current = NodePath("Control/VBoxContainer/MarginContainer/VBoxContainer/quick/current")
up = NodePath("Control/VBoxContainer/MarginContainer/VBoxContainer/quick/up")
piano_black = NodePath("Control/VBoxContainer/piano/piano_black")
piano_white = NodePath("Control/VBoxContainer/piano/piano_white")
note_label = NodePath("Control/StatsPanel/MarginContainer/VBoxContainer/HBoxContainer/NoteLabel")
polyphonic_player = NodePath("PolyphonicPlayer")
audio_player = NodePath("AudioStreamPlayer")

[node name="PolyphonicPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPolyphonic_ig7tw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_ig7tw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -48.0
offset_right = 180.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="record" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="record" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer/record"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
action_mode = 0
text = "Record"
script = ExtResource("2_h2yge")

[node name="play" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer/record"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
toggle_mode = true
action_mode = 0
text = "Play"

[node name="quick" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="down" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer/quick"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
action_mode = 0
text = "go down"

[node name="current" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer/quick"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
action_mode = 0
text = "current"

[node name="up" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer/quick"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_mode = 0
action_mode = 0
text = "go up"

[node name="piano" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -200

[node name="piano_white" type="HBoxContainer" parent="Control/VBoxContainer/piano"]
layout_mode = 2

[node name="piano_black" type="HBoxContainer" parent="Control/VBoxContainer/piano"]
layout_mode = 2

[node name="StatsPanel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -320.0
offset_right = 320.0
offset_bottom = 151.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")

[node name="MarginContainer" type="MarginContainer" parent="Control/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/StatsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NoteLabel" type="Label" parent="Control/StatsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 50)
layout_mode = 2
text = "C3
Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.5
offset_top = -49.0
offset_right = 43.5
grow_horizontal = 2
grow_vertical = 0
text = "` to restart
ESC to Quit"
horizontal_alignment = 1

[node name="release_knob" parent="Control" instance=ExtResource("2_0xm2m")]
position = Vector2(215, 116)

[node name="ReleaseLabel" type="Label" parent="Control/release_knob"]
offset_left = -41.0
offset_top = 34.0
offset_right = 43.0
offset_bottom = 57.0
text = "Release"
horizontal_alignment = 1

[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/record/record" to="Control/VBoxContainer/MarginContainer/VBoxContainer/record/record" method="_on_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/MarginContainer/VBoxContainer/record/record" to="Control/VBoxContainer/MarginContainer/VBoxContainer/record/record" method="_on_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/quick/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/quick/current" to="." method="_on_current_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/quick/up" to="." method="_on_up_pressed"]
